[metadata]
name = inveterate
version = 0.1
description = Proxmox API wrapper for Django
long_description = file: README.rst
url = https://www.hosnet.io/
author = Daniel Hosler
author_email = daniel@dhos.me
license = LGPLv3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: LGPLv3 License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    celery >= 5.2.7
    django-celery-beat >= 2.4.0
    django-celery-results >= 2.4.0
    celery-singleton >= 0.3.1
    djangorestframework >= 3.14.0
    proxmoxer >= 2.0.1
    dj-stripe >= 2.7.3

